# CodeIndex

./: .gitignore  README.md  docker-compose.yml  note.md  pipeline.ipynb  pyproject.toml
src/codeindex/: __init__.py  chunker.py  embedder.py  hasher.py  merkle.py  reranker.py  retrieval.py  visualize.py  walker.py
tests/: test_chunker.py  test_hasher.py  test_merkle.py  test_visualize.py  test_walker.py
