[project]
name = "codeindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Krish-Parekh", email = "krishparekh303@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "blake3>=1.0.8",
]

[project.scripts]
codeindex = "codeindex:main"

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
